--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         <img src="loader.svg" alt="loading">
     </div>
     <!-- Image Container -->
-    <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1691573155562-bb83d1237f23?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1691573155562-bb83d1237f23?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1691573155562-bb83d1237f23?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="">
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
