--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Title -->
     <h1>Infinite Scroll via Unsplash API</h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="loading">
     </div>
     <!-- Image Container -->
